--- a/Tabla Aplicabilidad_mod.html
+++ b/Tabla Aplicabilidad_mod.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabla Aplicabilidad</title>
+   
     <!-- Bootstrap CSS -->
+
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Estilos personalizados -->
 
@@ -4176,7 +4179,7 @@
                             console.log('Acordeón principal cerrado: ', openAccordion.id);
                         }
                     });
-                } else if (!isMainAccordion && isInNestedCollapse) {
+                } else if (isInNestedCollapse) {
                     // Si es un acordeón nested, cerramos otros acordeones nested dentro del mismo contenedor
                     console.log('Es un acordeón nested.');
     
