--- a/tabla aplicatibilidad_arc.html
+++ b/tabla aplicatibilidad_arc.html
@@ -117,7 +117,8 @@
 
     <!--art 70-->
 <div class="container mt-5">
-
+    <div class="collapse" id="collapseExample1" >
+  <div data-bs-target="#collapseExample1">
     <!--descripción art 70-->
     <div class="row mt-5">
         <div class="col-12">
